# shitposter

./: .env.example  README.md  pyproject.toml  settings.example.yaml  steps.example.yaml  steps.yaml
.github/workflows/: tests.yml
configs/: dev.yaml  holiday.yaml  placeholder.yaml  simple.yaml  steps-holiday.yaml  steps.yaml
configs/templates/: holiday_cat_caption_prompt.txt  holiday_cat_image_prompt.txt  holiday_emoji_prompt.txt  holiday_selection_prompt.txt
deploy/: run.sh  shitposter.service  shitposter.timer
pipelines/: steps-placeholder.yaml  steps-simple.yaml  steps.yaml
src/shitposter/: artifacts.py  cli.py  config.py  pipeline.py
src/shitposter/clients/: base.py  image_api.py  publishers.py  telegram.py  text_to_image.py  text_to_int.py  text_to_text.py  web_to_context.py
src/shitposter/providers/: base.py  publishers.py  text_to_caption.py  text_to_date.py  text_to_emoji.py  text_to_image.py  text_to_int.py  text_to_struct.py  text_to_text.py  web_to_context.py
src/shitposter/steps/: __init__.py  base.py  caption.py  choose_entry.py  choose_holiday.py  collect_context.py  construct_header.py  construct_prompt.py  generate_caption.py  generate_image.py  generate_text.py  image.py  prompt.py  publish.py  publish_post.py  resolve_date.py  retrieve_holidays.py  scrape_holidays.py  set_prompt.py
tests/: conftest.py  test_artifacts.py  test_choose_holiday.py  test_config_validation.py  test_get_context.py  test_pipeline.py  test_prompt.py  test_providers.py  test_publish_post.py  test_text_to_int.py  test_text_to_struct.py
